--- a/003_EE_Proba-V_NDVI_Comparison.ipynb
+++ b/003_EE_Proba-V_NDVI_Comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize Proba-V NDVI Comparison\n",
+    "*# Visualize Proba-V NDVI Comparison\n",
     "\n",
     "**Author:** René Kopeinig<br>\n",
     "**Description:** Comparison on Proba-V NDVI (Normalized Difference Vegetation Index) Imagery with help of Google Earth Engine Python API. One NDVI is derived on the fly, the other one is the actual NDVI band provided by Proba-V."
@@ -179,3 +179,4 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+ 
