--- a/008_EE_meets_Geopandas.ipynb
+++ b/008_EE_meets_Geopandas.ipynb
@@ -1,5 +1,5 @@
 {
- "cells": [
+*"cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** Next Step takes between 5 and 30 minutes depending on our choice of random points per polygon. If you would like to avoid this step, continue with importing points file in data folder. <br><br> **Continue two code cells below!**"
+    "**Note:** Next Step takes between 5 and 30 minutes depending on our choice of random points per polygon. If you would like to avoid this step, continue with importing points file in data folder. <br><br> **Continue two code cells below#**"
    ]
   },
   {
@@ -1103,3 +1103,4 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+ 
